--- a/duothan-fe/tabletest.html
+++ b/duothan-fe/tabletest.html
@@ -40,13 +40,13 @@
                 </div>
                 <div class="col-4">
                     <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-primary">Left</button>
-                <button type="button" class="btn btn-primary">Middle</button>
+                <button type="button" class="btn btn-primary">Add</button>
+                <button type="button" class="btn btn-primary">Update</button>
                 </div>
                 </div>
             </div>
             
-            <div class="container">
+            <div>
                 <table class="table">
                     <thead>
                     <tr>
