--- a/duothan-fe/tabletest.html
+++ b/duothan-fe/tabletest.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="tables.css">
 </head>
   <body>
     <div>
@@ -33,49 +33,61 @@
             <div class="row">
                 <div class="col-8">
                     <div class="input-group mb-3 justify-content-center">
-                        <input type="search" id="form1" class="form-control" placeholder="Type query" aria-label="Search" size="1"/>
+                        <input type="search" id="form1" class="form-control" placeholder="Type query" aria-label="Search"/>
                         <div class="input-group-append">
                         </div>
                       </div>
                 </div>
                 <div class="col-4">
                     <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-primary">Add</button>
-                <button type="button" class="btn btn-primary">Update</button>
-                </div>
+                        <button type="button" class="btn btn-primary">Add</button>
+                        <button type="button" class="btn btn-primary">Update</button>
+                    </div>
                 </div>
             </div>
-            
-            <div>
-                <table class="table">
+            <div class="container">
+                <table class="table table-bordered">
                     <thead>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">id</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">Quantity (Units)</th>
+                        <th scope="col">Select</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
                         <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
+                        <td>Med</td>
+                        <td>Med for something</td>
+                        <td>122</td>
+                        <td><input type="checkbox"></td>
                     </tr>
                     <tr>
                         <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
+                        <td>More Med</td>
+                        <td>Med for more problems</td>
+                        <td>1223</td>
+                        <td><input type="checkbox"></td>
+
                     </tr>
                     <tr>
                         <th scope="row">3</th>
-                        <td colspan="2">Larry the Bird</td>
-                        <td>@twitter</td>
+                        <td>Panadol</td>
+                        <td>Panadol is your savior</td>
+                        <td>9000</td>
+                        <td><input type="checkbox"></td>
                     </tr>
                     </tbody>
                 </table>
+            <div class="crudButton">
+                <div class="btn-group" role="group" aria-label="Basic example">
+                    <button type="button" class="btn btn-danger delete-btn">DELETE</button>
+                </div>
+            </div>
+
+                
             </div>
           </div>
         </div>
